setting up printer request

--- a/PrusaPushDispatcher/appsettings.json
+++ b/PrusaPushDispatcher/appsettings.json
@@ -2,6 +2,7 @@
   "Settings": {
     "PushoverUserKey": "",
     "PushoverAppKey": "",
+    "PrinterUrl": "http://prusa.internal.rickdgray.com/api/v1/status",
     "PollRateInMinutes": 60
   },
   "Logging": {
