add printer auth model

--- a/PrusaPushDispatcher/appsettings.json
+++ b/PrusaPushDispatcher/appsettings.json
@@ -2,6 +2,8 @@
   "Settings": {
     "PushoverUserKey": "",
     "PushoverAppKey": "",
+    "PrinterUsername": "maker",
+    "PrinterApiKey": "",
     "PrinterUrl": "http://prusa.internal.rickdgray.com/api/v1/status",
     "PollRateInMinutes": 60
   },
