correct httpclient handling and poll rate in seconds

--- a/PrusaPushDispatcher/appsettings.json
+++ b/PrusaPushDispatcher/appsettings.json
@@ -5,7 +5,7 @@
     "PrinterUsername": "maker",
     "PrinterApiKey": "",
     "PrinterUrl": "http://prusa.internal.rickdgray.com/api/v1/status",
-    "PollRateInMinutes": 60
+    "PollRateInSeconds": 1
   },
   "Logging": {
     "LogLevel": {
