--- a/PrusaPushDispatcher/appsettings.json
+++ b/PrusaPushDispatcher/appsettings.json
@@ -4,7 +4,7 @@
     "PushoverAppKey": "",
     "PrinterUsername": "maker",
     "PrinterApiKey": "",
-    "PrinterUrl": "http://prusa.internal.rickdgray.com/api/v1/status",
+    "PrinterUrl": "http://prusa.internal.rickdgray.com",
     "PollRateInSeconds": 1
   },
   "Logging": {
