printer state whitelist and gracefully handle network transience

--- a/PrusaPushDispatcher/Properties/launchSettings.json
+++ b/PrusaPushDispatcher/Properties/launchSettings.json
@@ -1,7 +1,12 @@
 {
   "profiles": {
     "PrusaPushDispatcher": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "environmentVariables": {
+        "Settings__PushoverUserKey": "abcd1234",
+        "Settings__PushoverAppKey": "abcd1234",
+        "Settings__PrinterApiKey": "abcd1234"
+      }
     },
     "Docker": {
       "commandName": "Docker",
